--- a/apiDoc.yaml
+++ b/apiDoc.yaml
@@ -6,16 +6,15 @@ info:
 
 
 host: ...
-basePath: /v1
+basePath: /api/v1
 tags:
-  - name: comments
-    description: comments
-  - name: courseTable
-    description: courseTable
+  - name: comment
+    description: 评课和评论
+  - name: table
+    description: 排课课表
 
 schemes:
   - https
-  - http
 
 paths:
   /comments/course/:
@@ -23,7 +22,6 @@ paths:
       tags:
         - comment
       summary: 发布评课
-      description: ''
       parameters:
         - in: header
           name: token
@@ -54,16 +52,10 @@ paths:
                 type: string
               userId:
                 type: string
-        '405':
-          description: Invalid input
+        '401':
+          description: 未授权
 
     get:
-      tags:
-        - comment
-      summary: 获取评课详情
-      parameters:
-        - in: header
-          name: token    get:
       tags:
         - comment
       summary: 获取评课详情
@@ -86,7 +78,6 @@ paths:
           name: userId
           required: true
           type: string
-
       responses:
         "200":
           description: OK
@@ -95,34 +86,56 @@ paths:
             properties:
               token:
                 type: string
-              course:
-                $ref: "#/definitions/CourseComments"
-          required: true
-          type: string
-        - in: query
-          name: courseId
-          description: 课程id
-          required: true
-          type: string
-        - in: query
-          name: courseCommentId
-          required: true
-          description: 评课id
-          type: string
-        - in: header
-          name: userId
-          required: true
-          type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: object
-            properties:
-              token:
-                type: string
-              course:
-                $ref: "#/definitions/CourseComments"
+              courseCommentInfo:
+                type: object
+                properties:
+                  courseName:
+                    type: string
+                    description: 课程名称
+                  star:
+                    type: integer
+                    description: 评价星级
+                  attendance:
+                    type: string
+                    description: 考勤方式
+                  characters:
+                    type: array
+                    description: 课程特点
+                    items:
+                      type: string
+                  content:
+                    type: string
+                    description: 评课内容
+                  anonymity:
+                    type: boolean
+                    description: 是否匿名
+                  likeNum:
+                    type: integer
+                    description: 点赞数
+                  isLike:
+                    type: boolean
+                    description: 是否已点赞
+                  time:
+                    type: integer
+                    description: 评课时间(时间戳)
+                  userInfo:
+                    type: object
+                    description: 用户信息
+                    properties:
+                      username:
+                        type: string
+                      avatar:
+                        type: string
+                        description: 头像
+              commentsList:
+                type: array
+                description: 评论列表
+                items:
+                  $ref: '#/definitions/CommentInfo'
+        '401':
+          description: 未授权
+        '404':
+          description: not found
 
     delete:
       tags:
@@ -134,14 +147,52 @@ paths:
           name: token
           required: true
           type: string
-        - in: header
+        - in: query
           name: courseId
-          description: Pet object that needs to be added to the store
+          description: 课程id
           required: true
           type: string
-        - in: header
+        - in: query
           name: courseCommentId
           required: true
+          description: 评课id
+          type: string
+        - in: header
+          name: userId
+          required: true
+          type: string
+
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+        '401':
+          description: 未授权
+        '404':
+          description: not found
+
+  /comments/like/:
+    put:
+      tags:
+        - comment
+      summary: 点赞
+      parameters:
+        - in: header
+          name: token
+          required: true
+          type: string
+        - in: query
+          name: courseId
+          required: true
+          type: string
+        - in: query
+          name: targetId
+          required: true
+          description: 点赞对象id
           type: string
         - in: header
           name: userId
@@ -155,9 +206,248 @@ paths:
             properties:
               token:
                 type: string
-              code:
+              isLike:
+                type: boolean
+                description: 点赞状态
+              likeNum:
                 type: integer
+                description: 点赞数
+        '401':
+          description: 未授权
 
+  /comments/comments/:
+    post:
+      tags:
+        - comment
+      summary: 评论评课/回复评论
+      parameters:
+        - in: header
+          name: token
+          required: true
+          type: string
+        - in: header
+          name: courseId
+          required: true
+          type: string
+        - in: body
+          name: data
+          required: true
+          schema:
+            type: object
+            properties:
+              targetId:
+                type: string
+                description: 评论对象id
+              content:
+                type: string
+                description: 评论内容
+              isAnonymous:
+                type: boolean
+                description: 是否匿名
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+              commentInfo:
+                $ref: '#/definitions/CommentInfo'
+        '401':
+          description: 未授权
+        '404':
+          description: 不存在此评论对象
+
+  /table/:
+    get:
+      tags:
+        - table
+      summary: 获取所有课表
+      parameters:
+        - in: header
+          name: token
+          type: string
+        - in: header
+          name: userId
+          type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+              tableNum:
+                type: integer
+                description: 课表总数
+              tableList:
+                type: array
+                items:
+                  $ref: "#/definitions/Table"
+        '401':
+          description: 未授权
+
+    post:
+      tags:
+        - table
+      summary: 添加新课标/创建副本
+      parameters:
+        - in: header
+          name: token
+          type: string
+        - in: header
+          name: targetTableId
+          description: 课表副本id
+          type: string
+        - in: header
+          name: userId
+          type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+              tableInfo:
+                $ref: "#/definitions/Table"
+        '401':
+          description: 未授权
+
+    delete:
+      tags:
+        - table
+      summary: 删除课表
+      parameters:
+        - in: header
+          name: token
+          type: string
+        - in: header
+          name: tableId
+          type: string
+        - in: header
+          name: userId
+          type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+        '401':
+          description: 未授权
+        '404':
+          description: not found
+
+  /table/rename/:
+    put:
+      tags:
+        - table
+      summary: 课表重命名
+      parameters:
+        - in: header
+          name: token
+          type: string
+        - in: body
+          name: data
+          schema:
+            type: object
+            properties:
+              newName:
+                type: string
+              tableId:
+                type: string
+        - in: header
+          name: userId
+          type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+        '401':
+          description: 未授权
+        '404':
+          description: not found
+
+  /table/class/:
+    post:
+      tags:
+        - table
+      summary: 收藏的课堂加入课表
+      parameters:
+        - in: header
+          name: token
+          type: string
+        - in: body
+          name: data
+          schema:
+            type: object
+            properties:
+              tableId:
+                type: string
+              classId:
+                type: string
+        - in: header
+          name: userId
+          type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+              tableId:
+                type: string
+              classInfo:
+                $ref: "#/definitions/Class"
+        '401':
+          description: 未授权
+
+    delete:
+      tags:
+        - table
+      summary: 删除课堂
+      parameters:
+        - in: header
+          name: token
+          type: string
+        - in: body
+          name: data
+          schema:
+            type: object
+            properties:
+              tableId:
+                type: string
+              classId:
+                type: string
+        - in: header
+          name: userId
+          type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+            properties:
+              token:
+                type: string
+        '401':
+          description: 未授权
+        '404':
+          description: not found
+
+definitions:
   CourseComments:
     type: object
     properties:
@@ -170,12 +460,98 @@ paths:
       attendance:
         type: string
         description: 考勤方式
-      character:
-        type: string
+      characters:
+        type: array
         description: 课程特点
-      comment:
+        items:
+          type: string
+      content:
         type: string
         description: 课程评价
-      anonymity:
+      isAnonymous:
         type: boolean
         description: 是否匿名
+
+  CommentInfo:
+    type: object
+    description: 评论信息
+    properties:
+      content:
+        type: string
+        description: 评论内容
+      likeNum:
+        type: integer
+        description: 点赞数
+      isLike:
+        type: boolean
+        description: 是否已点赞
+      time:
+        type: string
+        description: 评课时间（时间戳）
+      userInfo:
+        type: object
+        description: 用户信息
+        properties:
+          username:
+            type: string
+          avatar:
+            type: string
+            description: 头像
+      commentTarget:
+        type: object
+        description: 评课对象
+        properties:
+          userId:
+            type: string
+          username:
+            type: string
+            description: 用户昵称
+
+  Class:
+    type: object
+    description: 课堂
+    properties:
+      courseId:
+        type: string
+        description: 课程id
+      classId:
+        type: string
+        description: 课堂id
+      className:
+        type: string
+      teacher:
+        type: string
+      place:
+        type: string
+      start:
+          type: integer
+          description: 上课开始时间（start=3表示上午第三节开始）
+      during:
+          type: integer
+          description: 上课持续时间（during=2表示持续2节课）
+      day:
+          type: integer
+          description: 上课星期
+      weeks:
+          type: array
+          description: 上课周次如[1, 2, 3 ... 17]
+          items:
+            type: integer
+
+  Table:
+    type: object
+    description: 课表
+    properties:
+      tableId:
+        type: string
+      tableName:
+        type: string
+        description: 课表名
+      rank:
+        type: integer
+        description: 课表优先级，排列顺序
+      classList:
+        type: array
+        description: 课堂列表
+        items:
+          $ref: "#/definitions/Class"
