--- a/doc/comment_table.yaml
+++ b/doc/comment_table.yaml
@@ -17,7 +17,7 @@ schemes:
   - https
 
 paths:
-  /comments/course/:
+  /course/comment/:
     post:
       tags:
         - comment
@@ -55,7 +55,10 @@ paths:
                 type: string
         '401':
           description: 未授权
+        '500':
+          description: 服务器错误
 
+  /course/{courseId}/comment/{courseCommentId}/:
     get:
       tags:
         - comment
@@ -65,12 +68,12 @@ paths:
           name: token
           required: true
           type: string
-        - in: query
+        - in: path
           name: courseId
           description: 课程id
           required: true
           type: string
-        - in: query
+        - in: path
           name: courseCommentId
           required: true
           description: 评课id
@@ -98,6 +101,8 @@ paths:
           description: 未授权
         '404':
           description: not found
+        '500':
+          description: 服务器错误
 
     delete:
       tags:
@@ -108,12 +113,12 @@ paths:
           name: token
           required: true
           type: string
-        - in: query
+        - in: path
           name: courseId
           description: 课程id
           required: true
           type: string
-        - in: query
+        - in: path
           name: courseCommentId
           required: true
           description: 评课id
@@ -135,8 +140,10 @@ paths:
           description: 未授权
         '404':
           description: not found
+        '500':
+          description: 服务器错误
 
-  /comments/like/:
+  /course/{courseId}/comment/{targetId}/like/:
     put:
       tags:
         - comment
@@ -146,11 +153,11 @@ paths:
           name: token
           required: true
           type: string
-        - in: query
+        - in: path
           name: courseId
           required: true
           type: string
-        - in: query
+        - in: path
           name: targetId
           required: true
           description: 点赞对象id
@@ -159,6 +166,14 @@ paths:
           name: userId
           required: true
           type: string
+        - in: body
+          name: data
+          required: true
+          schema:
+            type: object
+            properties:
+              isLike:
+                type: boolean
       responses:
         "200":
           description: OK
@@ -175,8 +190,10 @@ paths:
                 description: 点赞数
         '401':
           description: 未授权
+        '500':
+          description: 服务器错误
 
-  /comments/:
+  /course/{courseId}/comment/:
     post:
       tags:
         - comment
@@ -186,7 +203,7 @@ paths:
           name: token
           required: true
           type: string
-        - in: header
+        - in: path
           name: courseId
           required: true
           type: string
@@ -219,6 +236,8 @@ paths:
           description: 未授权
         '404':
           description: 不存在此评论对象
+        '500':
+          description: 服务器错误
 
   /table/:
     get:
@@ -249,11 +268,13 @@ paths:
                   $ref: "#/definitions/ClassTable"
         '401':
           description: 未授权
+        '500':
+          description: 服务器错误
 
     post:
       tags:
         - table
-      summary: 添加新课标/创建副本
+      summary: 添加新课表/创建副本
       parameters:
         - in: header
           name: token
@@ -277,6 +298,8 @@ paths:
                 $ref: "#/definitions/ClassTable"
         '401':
           description: 未授权
+        '500':
+          description: 服务器错误
 
   /table/{tableId}/:
     delete:
@@ -286,6 +309,7 @@ paths:
       parameters:
         - in: header
           name: token
+          required: true
           type: string
         - in: path
           name: tableId
@@ -293,6 +317,7 @@ paths:
           type: string
         - in: header
           name: userId
+          required: true
           type: string
       responses:
         "200":
@@ -306,6 +331,8 @@ paths:
           description: 未授权
         '404':
           description: not found
+        '500':
+          description: 服务器错误
 
   /table/{tableId}/rename/:
     put:
@@ -345,6 +372,8 @@ paths:
           description: 未授权
         '404':
           description: not found
+        '500':
+          description: 服务器错误
 
   /table/{tableId}/class/{classId}/:
     post:
@@ -380,6 +409,8 @@ paths:
                 $ref: "#/definitions/Class"
         '401':
           description: 未授权
+        '500':
+          description: 服务器错误
 
     delete:
       tags:
@@ -414,6 +445,8 @@ paths:
           description: 未授权
         '404':
           description: not found
+        '500':
+          description: 服务器错误
 
 definitions:
   CourseCommentsPublish:
